# brain-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/brain_cli/: __init__.py  cli.py  config.py  database.py  dream.py  embeddings.py  exporter.py  hygiene.py  init.py  reader.py  replay.py  schema.py  services.py  signals.py  tui.py  utils.py  writer.py
src/brain_cli/data/: CLAUDE.md
src/brain_cli/data/hooks/: dream-hook.sh  pre-brain-write-semantic.sh  pre-brain-write.md
src/brain_cli/data/services/: ai.x-arc.brain-dream.plist  ai.x-arc.brain-viz.plist  brain-dream.service  brain-viz.service
src/brain_cli/data/skills/brain-dream/phases/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  preamble.md
src/brain_cli/data/viz/: app.js  index.html  styles.css
tests/: conftest.py  test_cli.py  test_config.py  test_dream.py  test_embeddings.py  test_exporter.py  test_hygiene.py  test_init.py  test_reader.py  test_replay.py  test_schema.py  test_signals.py  test_tui.py  test_writer.py
